@@ -5,6 +5,7 @@
 - bugfix remove race condition when a custom resource did change timestamp during compilation
 - bugfix variable property did not work on objects variable in template
 - bugfix smarty_make_timestamp() failed to process DateTime objects properly
+- bugfix wrong resource could be used on compile check of custom resource
 
 26.09.2011
 - bugfix repeated calls to same subtemplate did not make use of cached template object
